syntax = "proto3";

package gosample.movie.library;

option go_package = ".;pb";
option java_package = "com.grpc.movie.library";
option java_multiple_files = true;

import "movie_original_message.proto";
import "movie_cast_crew_message.proto";
import "google/protobuf/timestamp.proto";


message Movie {
    string id = 1;
    string title = 2;
    string productionHouse = 3;
    string budget = 4;
    uint32 releaseYear = 5;
    google.protobuf.Timestamp updated_at = 6;
    OriginalInfo originalInfo = 7;
    CastCrew castCrew = 8;
}